# fbatch

./: FbatchSpec.hs  Main.hs  MainSpec.hs  README.md  fbatch  fbatch-test.hs  fbatch.cabal  fbatch.hi  fbatch.hs
src/: Fbatch.hs
test/: FbatchSpec.hs
