name:                fbatch
version:             0.1.0.0
synopsis:            "Simple batch file renamer"     
license:             MIT
license-file:        LICENSE
author:              Isaac
build-type:          Simple
cabal-version:       >=1.8

executable fbatch
  main-is:             Main.hs
  build-depends:       base,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             MainSpec.hs
  build-depends:       base,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel,
                       hspec