name:                fbatch
version:             0.1.0.0
synopsis:            "Simple batch file renamer"     
license:             MIT
license-file:        LICENSE
author:              Isaac
build-type:          Simple
cabal-version:       >=1.8

executable fbatch
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror
  build-depends:       base,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel >= 0.7

test-suite tests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             test/MainSpec.hs
  build-depends:       base,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel >= 0.7,
                       hspec