Name:                fbatch
Version:             0.1.0.0
Synopsis:            "Simple batch file renamer"     
License:             MIT
License-File:        LICENSE
Author:              Isaac
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Hs-Source-Dirs:      src
  Exposed-Modules:     Fbatch
  Build-Depends:       base,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel >= 0.7

Executable fbatch
  Hs-Source-Dirs:      src
  Main-Is:             Main.hs
  Ghc-Options:         -Wall -Werror  
  Build-Depends:       base,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel >= 0.7

Test-Suite tests
  Hs-Source-Dirs:      test
  Type:                exitcode-stdio-1.0
  Main-Is:             MainSpec.hs
  Ghc-Options:         -Wall -Werror
  Build-Depends:       base,
                       fbatch,
                       MissingH,
                       directory,
                       ansi-terminal,
                       filepath,
                       monad-parallel >= 0.7,
                       hspec